--- a/catalog.html
+++ b/catalog.html
@@ -2,195 +2,200 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
-    <title>HTML Academy: Глейси</title>
+    <title>Gllacy</title>
+    <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:700,900,500&subset=latin,cyrillic" rel="stylesheet" type="text/css">
   </head>
   <body>
-  	<!---->
-	<header class="main-header">
-		<div class="container">
-			<nav class="main-navigation">
-				<div class="index-logo">
-        			<img src="img/logo.png" width="154" height="64" alt="Gllacy Shop">
-      			</div>
+      	<div class="content-wrapper">
+	        <header class="main-header">
+	            <nav class="main-navigation">
+	              <div class="index-logo">
+	                    <img src="img/logo.png" width="154" height="64" alt="Gllacy Shop">
+	              </div>
+	              <ul>
+	                <li><a href="#">Каталог</a>
+	                  <ul class="catalog-nav">
+	                    <li><a href="#">Новинки</a></li>
+	                    <li><a href="#">Сливочное</a></li>
+	                    <li><a href="#">Щербеты</a></li>
+	                    <li><a href="#">Фруктовый лед</a></li>
+	                    <li><a href="#">Мелорин</a></li>
+	                  </ul>
+	                </li>
+	                <li><a href="#">Доставка и оплата</a></li>
+	                <li><a href="#">О Компании</a></li>
+	              </ul>
+	            </nav>
+	            <div class="user-block">
+	              <a class="basket" href="#">Пусто</a>
+	              <a class="login" href="#">Вход</a>
+	              <form class="user-search">
+	                <input id="search-id" type="search" placeholder="Что ищем?">
+	                <label for="search-id">Поиск по сайту</label>
+	              </form>              
+	              <div class="login-window">
+	                <form action="">
+	                  <input type="email" name="email" placeholder="Электронная почта" required>
+	                  <input type="password" name="login" placeholder="Пароль" required>
+	                  <input type="submit" value="Отправить">
+	                </form>
+	                <a href="#">Забыли пароль?</a>
+	                <a href="#">Новая регистрация</a>
+	              </div>
+	              <p class="timetable">С 10 до 20, ежедневно</p>
+	              <p class="tel">8 812 450-25-25</p>
+	          	</div>
+	        </header>
+        <main class="catalog-main container">
+			<div class="breadcrumbs">
 				<ul>
-					<li><a href="#">Каталог</a>
-						<ul class="catalog-nav">
-							<li><a href="#">Новинки</a></li>
-							<li><a href="#">Сливочное</a></li>
-							<li><a href="#">Щербеты</a></li>
-							<li><a href="#">Фруктовый лед</a></li>
-							<li><a href="#">Мелорин</a></li>
-						</ul>
-					</li>
-					<li><a href="#">Доставка и оплата</a></li>
-					<li><a href="#">О Компании</a></li>
+					<li><a href="#">Главная</a></li>
+					<li><a href="#">Каталог</a></li>
+					<li><a>Сливочное</a></li>
 				</ul>
-			</nav>
-			<div class="user-block">
-				<form class="user-search">
- 					<input id="search-id" type="search" placeholder="Что ищем?">
- 					<label for="search-id">Поиск по сайту</label>
+			</div>
+			<h1>Сливочное мороженое</h1>
+			<section class="filters">
+				<form action="">
+					<div class="sorting">
+						<h3>Сортировка:</h3>
+						<select name="sorting">
+							<option value="popularity">по популярности:</option>
+						</select>	
+					</div>
+					<!--добавить фильтр по цене-->
+					<div class="fatness">
+						<h3>Жирность:</h3>
+						<div class="group-1">
+							<label for="0-field">0%</label>
+							<input id="0-field" name="fatness-type" type="radio" value="0">
+
+							<label for="10-field">до 10%</label>
+							<input id="10-field" name="fatness-type" type="radio" value="10" checked>
+
+							<label for="30-field">до 30%</label>
+							<input id="30-field" name="fatness-type" type="radio" value="30">
+							<label for="more-field">выше 30%</label>
+							<input id="more-field" name="fatness-type" type="radio" value="more">			
+						</div>					
+					</div>
+					<div class="filler">
+						<h3>Наполнители:</h3>
+						<div class="group-2">
+				            <input id="chocolate-field" name="chocolate" type="checkbox" checked>
+				            <label for="chocolate-field">шоколадные</label>
+				            
+				            <input id="sugar-field" name="sugar" type="checkbox" checked>
+				            <label for="sugar-field">сахарные присыпки</label>
+
+				            <input id="fruits-field" name="fruits" type="checkbox">
+				            <label for="fruits-field">фрукты</label>
+
+				            <input id="syrup-field" name="syrup" type="checkbox">
+				            <label for="syrup-field">сиропы</label>
+
+				            <input id="jam-field" name="jam" type="checkbox">
+				            <label for="jam-field">джемы</label>
+						</div>	
+					</div>
+					<input class="btn" type="submit" value="Применить">
 				</form>
-          		<a class="login" href="#">Вход</a>
-          		<div class="login-window">
-          			<form action="">
-          				<input type="email" name="email" placeholder="Электронная почта" required>
-          				<input type="password" name="login" placeholder="Пароль" required>
-          				<input type="submit" value="Отправить">
-          			</form>
-          			<a href="#">Забыли пароль?</a>
-          			<a href="#">Новая регистрация</a>
+			</section>
+			<section class="products">
+				<div class="product">
+            		<img src="img/product-1.jpg" width="200" height="200" alt="">
+            		<p>310 <span class="ruble">руб.</span><span class="kilo">/кг</span></p>
+            		<a href="#">Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
           		</div>
-          		<a class="basket" href="#">2 товара</a>
-          		<p>С 10 до 20, ежедневно</p>
-          		<p>8 812 450-25-25</p>
-        	</div>
-		</div>
-	</header>
-
-	<main class="catalog-main container">
-		<div class="breadcrumbs">
-			<ul>
-				<li><a href="#">Главная</a></li>
-				<li><a href="#">Каталог</a></li>
-				<li><a>Сливочное</a></li>
-			</ul>
-		</div>
-		<h1>Сливочное мороженое</h1>
-		<section class="filters">
-			<form action="">
-				<h3>Сортировка:</h3>
-				<select name="sorting">
-					<option value="popularity">по популярности:</option>
-				</select>
-				<!--добавить фильтр по цене-->
-				<h3>Жирность:</h3>
-				<div class="group-1">
-					<label for="0-field">0%</label>
-					<input id="0-field" name="fatness-type" type="radio" value="0">
-
-					<label for="10-field">до 10%</label>
-					<input id="10-field" name="fatness-type" type="radio" value="10" checked>
-
-					<label for="30-field">до 30%</label>
-					<input id="30-field" name="fatness-type" type="radio" value="30">
-
-					<label for="more-field">выше 30%</label>
-					<input id="more-field" name="fatness-type" type="radio" value="more">					
-				</div>
-	
-				<h3>Наполнители:</h3>
-				<div class="group-2">
-		            <input id="chocolate-field" name="chocolate" type="checkbox" checked>
-		            <label for="chocolate-field">шоколадные</label>
-		            
-		            <input id="sugar-field" name="sugar" type="checkbox" checked>
-		            <label for="sugar-field">сахарные присыпки</label>
-
-		            <input id="fruits-field" name="fruits" type="checkbox">
-		            <label for="fruits-field">фрукты</label>
-
-		            <input id="syrup-field" name="syrup" type="checkbox">
-		            <label for="syrup-field">сиропы</label>
-
-		            <input id="jam-field" name="jam" type="checkbox">
-		            <label for="jam-field">джемы</label>
-				</div>
-				<input class="btn" type="submit" value="Применить">
-			</form>
-		</section>
-		<section class="products">
-			<article class="product">
-				<img src="img/product-1.jpg" width="267" height="267" alt="">
-				<p>310 <span>руб.</span>/кг</p>
-				<a href="#">Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
-			</article>
-			<article class="product">
-				<img src="img/product-2.jpg" width="267" height="267" alt="">
-				<p>310 <span>руб.</span>/кг</p>
-				<a href="#">Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
-			</article>
-			<article class="product">
-				<img src="img/product-3.jpg" width="267" height="267" alt="">
-				<p>310 <span>руб.</span>/кг</p>
-				<a href="#">Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
-			</article>
-			<article class="product">
-				<img src="img/product-4.jpg" width="267" height="267" alt="">
-				<p>310 <span>руб.</span>/кг</p>
-				<a href="#">Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
-			</article>
-
-			<article class="product">
-				<img src="img/product-5.jpg" width="267" height="267" alt="">
-				<p>310 <span>руб.</span>/кг</p>
-				<a href="#">Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
-			</article>
-			<article class="product">
-				<img src="img/product-6.jpg" width="267" height="267" alt="">
-				<p>310 <span>руб.</span>/кг</p>
-				<a href="#">Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
-			</article>
-			<article class="product">
-				<img src="img/product-7.jpg" width="267" height="267" alt="">
-				<p>310 <span>руб.</span>/кг</p>
-				<a href="#">Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
-			</article>
-			<article class="product">
-				<img src="img/product-8.jpg" width="267" height="267" alt="">
-				<p>310 <span>руб.</span>/кг</p>
-				<a href="#">Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
-			</article>
-
-			<article class="product">
-				<img src="img/product-9.jpg" width="267" height="267" alt="">
-				<p>310 <span>руб.</span>/кг</p>
-				<a href="#">Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
-			</article>
-			<article class="product">
-				<img src="img/product-10.jpg" width="267" height="267" alt="">
-				<p>310 <span>руб.</span>/кг</p>
-				<a href="#">Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
-			</article>
-		    <article class="product">
-				<img src="img/product-11.jpg" width="267" height="267" alt="">
-				<p>310 <span>руб.</span>/кг</p>
-				<a href="#">Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
-			</article>
-			<article class="product">
-				<img src="img/product-12.jpg" width="267" height="267" alt="">
-				<p>310 <span>руб.</span>/кг</p>
-				<a href="#">Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
-			</article>
-		</section>
-		<div class="paginator">
-	        <a class="btn-catalog active">1</a>
-	        <a class="btn-catalog" href="#">2</a>
-	        <a class="btn-catalog" href="#">3</a>
-	       	<a class="btn-catalog" href="#">4</a>
-	        <a class="btn-catalog" href="#">5</a>
-	        <a class="btn-catalog" href="#">следующая</a>
-	    </div>
-	</main>
-
-	<footer class="main-footer container clerfix">
-		<div class="footer-social">
-            <a class="social-btn social-btn-vk" href="#">Вконтакте</a>
-            <a class="social-btn social-btn-fb" href="#">Фейсбук</a>
-            <a class="social-btn social-btn-inst" href="#">Инстаграм</a>
-            <a class="social-btn social-btn-tw" href="#">Твиттер</a>
-        </div>
-        <div class="footer-links">
-        	<a href="#">Для поставщиков</a>
-        	<a href="#">О производстве</a>
-        	<a href="#">Наши документы</a>
-        	<a href="#">Экологические стандарты</a>
-        </div>
-        <div class="footer-copyright">
-        	<a href="#">HTML Academy</a>
-        	<p>Сделано в <a href="#">HTML Academy</a> &copy; 2017</p>
-        </div>
-	</footer>
-  <body>
-<html>
+          <div class="product">
+            <img src="img/product-2.jpg" width="200" height="200" alt="">
+            <p>380 <span class="ruble">руб.</span><span class="kilo">/кг</span></p>
+            <a href="#">Сливочно-кофейное с кусочками шоколада</a>
+          </div>
+          <div class="product">
+            <img src="img/product-3.jpg" width="200" height="200" alt="">
+            <p>355 <span class="ruble">руб.</span><span class="kilo">/кг</span></p>
+            <a href="#">Сливочно-клубничное с присыпкой из белого шоколада</a>
+          </div>
+          <div class="product">
+            <img src="img/product-4.jpg" width="200" height="200" alt="">
+            <p>415 <span class="ruble">руб.</span><span class="kilo">/кг</span></p>
+            <a href="#">Сливочное крем-брюле с карамельной подливкой</a>
+          </div>
+           <div class="product">
+            <img src="img/product-1.jpg" width="200" height="200" alt="">
+            <p>310 <span class="ruble">руб.</span><span class="kilo">/кг</span></p>
+            <a href="#">Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
+          </div>
+          <div class="product">
+            <img src="img/product-2.jpg" width="200" height="200" alt="">
+            <p>380 <span class="ruble">руб.</span><span class="kilo">/кг</span></p>
+            <a href="#">Сливочно-кофейное с кусочками шоколада</a>
+          </div>
+          <div class="product">
+            <img src="img/product-3.jpg" width="200" height="200" alt="">
+            <p>355 <span class="ruble">руб.</span><span class="kilo">/кг</span></p>
+            <a href="#">Сливочно-клубничное с присыпкой из белого шоколада</a>
+          </div>
+          <div class="product">
+            <img src="img/product-4.jpg" width="200" height="200" alt="">
+            <p>415 <span class="ruble">руб.</span><span class="kilo">/кг</span></p>
+            <a href="#">Сливочное крем-брюле с карамельной подливкой</a>
+          </div>
+           <div class="product">
+            <img src="img/product-1.jpg" width="200" height="200" alt="">
+            <p>310 <span class="ruble">руб.</span><span class="kilo">/кг</span></p>
+            <a href="#">Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
+          </div>
+          <div class="product">
+            <img src="img/product-2.jpg" width="200" height="200" alt="">
+            <p>380 <span class="ruble">руб.</span><span class="kilo">/кг</span></p>
+            <a href="#">Сливочно-кофейное с кусочками шоколада</a>
+          </div>
+          <div class="product">
+            <img src="img/product-3.jpg" width="200" height="200" alt="">
+            <p>355 <span class="ruble">руб.</span><span class="kilo">/кг</span></p>
+            <a href="#">Сливочно-клубничное с присыпкой из белого шоколада</a>
+          </div>
+          <div class="product">
+            <img src="img/product-4.jpg" width="200" height="200" alt="">
+            <p>415 <span class="ruble">руб.</span><span class="kilo">/кг</span></p>
+            <a href="#">Сливочное крем-брюле с карамельной подливкой</a>
+          </div>
+			</section>
+			<div class="paginator">
+		        <a class="btn-catalog active">1</a>
+		        <a class="btn-catalog" href="#">2</a>
+		        <a class="btn-catalog" href="#">3</a>
+		       	<a class="btn-catalog" href="#">4</a>
+		        <a class="btn-catalog" href="#">5</a>
+		        <a class="btn-catalog" href="#">следующая</a>
+		    </div>
+		</main>
+        <footer class="main-footer container clearfix">
+          <div class="footer-social footer-block">
+              <a class="social-btn social-btn-vk" href="#">Вконтакте</a>
+              <a class="social-btn social-btn-fb" href="#">Фейсбук</a>
+              <a class="social-btn social-btn-inst" href="#">Инстаграм</a>
+              <a class="social-btn social-btn-tw" href="#">Твиттер</a>
+          </div>
+          <div class="footer-links footer-block">
+            <div>
+              <a href="#">Для поставщиков</a>
+ 	<a href="#">О производстве</a> 
+            </div>
+            <div>
+              <a href="#">Наши документы</a>
+              <a href="#">Экологические стандарты</a>
+            </div>
+          </div>
+          <div class="footer-copyright footer-block">
+            <a href="#">HTML Academy</a>
+            <p>Сделано в <a href="#">HTML Academy</a> &copy; 2017</p>
+          </div>
+        </footer>    
+      </div>
+    </div>
+  </body>
