--- a/index.html
+++ b/index.html
@@ -2,166 +2,163 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
-    <title>HTML Academy: Глейси</title>
+    <title>Gllacy</title>
+    <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:700,900,500&subset=latin,cyrillic" rel="stylesheet" type="text/css">
   </head>
   <body>
-  	<!---->
-	<header class="main-header">
-		<div class="container">
-			<nav class="main-navigation">
-				<div class="index-logo">
-        			<img src="img/logo.png" width="154" height="64" alt="Gllacy Shop">
-      			</div>
-				<ul>
-					<li><a href="#">Каталог</a>
-						<ul class="catalog-nav">
-							<li><a href="#">Новинки</a></li>
-							<li><a href="#">Сливочное</a></li>
-							<li><a href="#">Щербеты</a></li>
-							<li><a href="#">Фруктовый лед</a></li>
-							<li><a href="#">Мелорин</a></li>
-						</ul>
-					</li>
-					<li><a href="#">Доставка и оплата</a></li>
-					<li><a href="#">О Компании</a></li>
-				</ul>
-			</nav>
-			<div class="user-block">
-				<form class="user-search">
- 					<input id="search-id" type="search" placeholder="Что ищем?">
- 					<label for="search-id">Поиск по сайту</label>
-				</form>
-          		<a class="login" href="#">Вход</a>
-          		<div class="login-window">
-          			<form action="">
-          				<input type="email" name="email" placeholder="Электронная почта" required>
-          				<input type="password" name="login" placeholder="Пароль" required>
-          				<input type="submit" value="Отправить">
-          			</form>
-          			<a href="#">Забыли пароль?</a>
-          			<a href="#">Новая регистрация</a>
-          		</div>
-          		<a class="basket" href="#">Пусто</a>
-          		<p>С 10 до 20, ежедневно</p>
-          		<p>8 812 450-25-25</p>
-        	</div>
-		</div>
-	</header>
-
-	<main class="index-main container">
-		<section class="slider">
-	        <div class="slides">
-	            <div class="slide slide-1">
-	                <p>Пломбир с помадкой<br>и клубничный щербет</p>
-	                <a href="#">Давайте оба!</a>
-	            </div>
-	            <div class="slide slide-2">
-	                <p>Шоколадный пломбир<br>и лимонный сорбет</p>
-	                <a href="#">Давайте оба!</a>
-	            </div>
-	            <div class="slide slide-3">
-	                <p>Крем-брюле и пломбир<br>с малиновым джемом</p>
-	                <a href="#">Давайте оба!</a>
-	            </div>
-	        </div>			
-	        <input id="btn-1" name="toggle" type="radio" checked>
-	        <input id="btn-2" name="toggle" type="radio">
-	        <input id="btn-3" name="toggle" type="radio">
-	        <div class="slider-controls">
-	            <label for="btn-1"></label>
-	            <label for="btn-2"></label>
-	            <label for="btn-3"></label>
-	        </div>
-		</section>
-
-		<section class="banners">
-			<div class="banner left-column">
-				<p><b>Малинка даром!</b></p>
-				<p>При покупке 2 кг любого фруктового мороженого, добавим в ваш заказ банку малинового варенья бесплатно.</p>
-				<a href="#">Хочу варенье!</a>
-			</div>
-			<div class="banner right-column">
-				<p><b>Шоколадки даром!</b></p>
-				<p>При покупке 2 кг пломбира, добавим в ваш заказ упаковку вкуснейшей шоколадной присыпки совершенно бесплатно.</p>
-				<a href="">Хочу шоколадки!</a>
-			</div>
-		</section>
-		<section class="hits">
-			<div class="hit">
-				<img src="img/product-1.jpg" width="267" height="267" alt="">
-				<p>310 <span>руб.</span>/кг</p>
-				<a href="#">Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
-			</div>
-			<div class="hit">
-				<img src="img/product-2.jpg" width="267" height="267" alt="">
-				<p>380 <span>руб.</span>/кг</p>
-				<a href="#">Сливочно-кофейное с кусочками шоколада</a>
-			</div>
-			<div class="hit">
-				<img src="img/product-3.jpg" width="267" height="267" alt="">
-				<p>355 <span>руб.</span>/кг</p>
-				<a href="#">Сливочно-клубничное с присыпкой из белого шоколада</a>
-			</div>
-			<div class="hit">
-				<img src="img/product-4.jpg" width="267" height="267" alt="">
-				<p>415 <span>руб.</span>/кг</p>
-				<a href="#">Сливочное крем-брюле с карамельной подливкой</a>
-			</div>
-		</section>	
-		<section class="seo">
-			<h2>Магазин Глейси — это онлайн и офлайн магазин по продаже мороженого собственного производства на развес</h2>
-			<p>Все наше мороженое изготавливается на собственном производстве, с использованием современного оборудования и проверенных временем технологий.</p>
-			<p>Для приготовления мороженого используются настоящие сливки и молоко высочайшего качества. Все дополнительные ингредиенты и добавки произведены из натурального, экологически чистого сырья.</p>
-			<p>Закупка ингредиентов  производится только у проверенных фермерских хозяйств и компаний, с которыми нас связывает долговременное сотрудничество.</p>
-			<p>Доставка нашего мороженого до заказчиков осуществляется в специальном термопаке, который не дает мороженому растаять в пути и позволяет сохранить превосходный вкус.</p>
-		</section>	
-		<section class="news-and-mailing">
-			<div class="left-column">
-				<a href="#">
-					<p>Новое в нашем блоге</p>
-					<p>10  способов сервировки фруктовых щербетов к столу</p>
-				</a>
-			</div>
-			<div class="right-column">
-				<p>Подпишитесь на нашу сладкую рассылку
-				и будете всегда в курсе всего самого вкусного, что у нас происходит. Обещаем не спамить и не слать всякой ненужной ерунды. Честно =)</p>
-				<form action="">
-					<input type="email" name="email" placeholder="Электронная почта" required>
-					<button>Отправить</button>
-				</form>
-			</div>
-		</section>
-		<section class="map">
-			<div class="map-address">
-				<p>Адрес главного офиса и офлайн магазина:</p>
-				<p>ул. Большая Конюшенная 19/8, Санкт-Петербург</p>
-				<p>Для заказов по телефону:</p>
-				<p>8 812 450-25-25</p>
-				<p>(с 10 до 20 ежедневно)</p>
-				<a href="#">Форма обратной связи</a>
-			</div>
-		</section>
-	</main>
-
-	<footer class="main-footer container clerfix">
-		<div class="footer-social">
-            <a class="social-btn social-btn-vk" href="#">Вконтакте</a>
-            <a class="social-btn social-btn-fb" href="#">Фейсбук</a>
-            <a class="social-btn social-btn-inst" href="#">Инстаграм</a>
-            <a class="social-btn social-btn-tw" href="#">Твиттер</a>
+    <input type="radio" id="btn-1" name="toggle" checked>
+    <input type="radio" id="btn-2" name="toggle">
+    <input type="radio" id="btn-3" name="toggle">
+    <div class="site-wrapper">
+      <div class="content-wrapper">
+        <header class="main-header">
+            <nav class="main-navigation">
+              <div class="index-logo">
+                    <img src="img/logo.png" width="154" height="64" alt="Gllacy Shop">
+              </div>
+              <ul>
+                <li>
+                  <a href="#">Каталог</a>
+                  <ul class="catalog-nav">
+                    <li><a href="#">Новинки</a></li>
+                    <li><a href="#">Сливочное</a></li>
+                    <li><a href="#">Щербеты</a></li>
+                    <li><a href="#">Фруктовый лед</a></li>
+                    <li><a href="#">Мелорин</a></li>
+                  </ul>
+                </li>
+                <li><a href="#">Доставка и оплата</a></li>
+                <li><a href="#">О Компании</a></li>
+              </ul>
+            </nav>
+            <div class="user-block">
+              <a class="basket" href="#">Пусто</a>
+              <a class="login" href="#">Вход</a>
+              <form class="user-search">
+                <input id="search-id" type="search" placeholder="Что ищем?">
+                <label for="search-id">Поиск по сайту</label>
+              </form>              
+              <div class="login-window">
+                <form action="">
+                  <input type="email" name="email" placeholder="Электронная почта" required>
+                  <input type="password" name="login" placeholder="Пароль" required>
+                  <input type="submit" value="Отправить">
+                </form>
+                <a href="#">Забыли пароль?</a>
+                <a href="#">Новая регистрация</a>
+              </div>
+              <p class="timetable">С 10 до 20, ежедневно</p>
+              <p class="tel">8 812 450-25-25</p>
+          </div>
+        </header>
+        <div class="slider">
+                <div class="slide" id="slide1">
+                  <div class="slide-title">Крем-брюле и пломбир с малиновым джемом</div>
+                  <a class="slide-btn" href="#">Давайте оба!</a>
+                </div>
+                <div class="slide" id="slide2">
+                  <div class="slide-title">Шоколадный пломбир и лимонный сорбет</div>
+                  <a class="slide-btn" href="#">Давайте оба!</a>
+                </div>
+                <div class="slide" id="slide3">
+                  <div class="slide-title">Пломбир с помадкой и клубничный щербет</div>
+                  <a class="slide-btn" href="#">Давайте оба!</a>
+                </div>
+                <div class="slider-controls">
+                  <label for="btn-1"></label>
+                  <label for="btn-2"></label>
+                  <label for="btn-3"></label>
+                </div>
         </div>
-        <div class="footer-links">
-        	<a href="#">Для поставщиков</a>
-        	<a href="#">О производстве</a>
-        	<a href="#">Наши документы</a>
-        	<a href="#">Экологические стандарты</a>
-        </div>
-        <div class="footer-copyright">
-        	<a href="#">HTML Academy</a>
-        	<p>Сделано в <a href="#">HTML Academy</a> &copy; 2017</p>
-        </div>
-	</footer>
-	
+        <section class="banners clearfix">
+          <div class="banner left-column">
+            <p><b>Малинка даром!</b></p>
+            <p>При покупке 2 кг любого фруктового мороженого, добавим в ваш заказ банку малинового варенья бесплатно.</p>
+            <a class="banner-btn" href="#">Хочу варенье!</a>
+          </div>
+          <div class="banner right-column">
+            <p><b>Шоколадки даром!</b></p>
+            <p>При покупке 2 кг пломбира, добавим в ваш заказ упаковку вкуснейшей шоколадной присыпки совершенно бесплатно.</p>
+            <a class="banner-btn" href="#">Хочу шоколадки!</a>
+          </div>
+        </section>
+        <section class="hits">
+          <div class="hit">
+            <img src="img/product-1.jpg" width="200" height="200" alt="">
+            <p>310 <span class="ruble">руб.</span><span class="kilo">/кг</span></p>
+            <a href="#">Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
+          </div>
+          <div class="hit">
+            <img src="img/product-2.jpg" width="200" height="200" alt="">
+            <p>380 <span class="ruble">руб.</span><span class="kilo">/кг</span></p>
+            <a href="#">Сливочно-кофейное с кусочками шоколада</a>
+          </div>
+          <div class="hit">
+            <img src="img/product-3.jpg" width="200" height="200" alt="">
+            <p>355 <span class="ruble">руб.</span><span class="kilo">/кг</span></p>
+            <a href="#">Сливочно-клубничное с присыпкой из белого шоколада</a>
+          </div>
+          <div class="hit">
+            <img src="img/product-4.jpg" width="200" height="200" alt="">
+            <p>415 <span class="ruble">руб.</span><span class="kilo">/кг</span></p>
+            <a href="#">Сливочное крем-брюле с карамельной подливкой</a>
+          </div>
+        </section>
+        <section class="seo">
+          <h2>Магазин Глейси — это онлайн и офлайн магазин по продаже мороженого собственного производства на развес</h2>
+          <p class="ice-cream">Все наше мороженое изготавливается на собственном производстве, с использованием современного оборудования и проверенных временем технологий.</p>
+          <p class="cow">Закупка ингредиентов  производится только у проверенных фермерских хозяйств и компаний, с которыми нас связывает долговременное сотрудничество.</p>
+          <p class="leaf">Для приготовления мороженого используются настоящие сливки и молоко высочайшего качества. Все дополнительные ингредиенты и добавки произведены из натурального, экологически чистого сырья.</p>
+          <p class="therm">Доставка нашего мороженого до заказчиков осуществляется в специальном термопаке, который не дает мороженому растаять в пути и позволяет сохранить превосходный вкус.</p>
+        </section>
+        <section class="news-and-mailing clearfix">
+          <div class="left-column">
+            <p class="news">Новое в нашем блоге</p>
+            <a>10  способов сервировки фруктовых щербетов к столу
+            </a>
+          </div>
+          <div class="right-column">
+            <p>Подпишитесь на нашу сладкую рассылку
+            и будете всегда в курсе всего самого вкусного, что у нас происходит. Обещаем не спамить и не слать всякой ненужной ерунды. Честно =)</p>
+            <form action="">
+              <input type="email" name="email" placeholder="Электронная почта" required>
+              <button>Отправить</button>
+            </form>
+          </div>
+        </section>
+        <section class="map">
+          <div class="map-address">
+            <p>Адрес главного офиса</br> и офлайн магазина:<strong>ул. Большая Конюшенная</br> 19/8, Санкт-Петербург</strong></p>
+            <p>Для заказов по телефону:<strong>8 812 450-25-25</strong></p>
+            <p class="map-timetable">(с 10 до 20 ежедневно)</p>
+            <a href="#">Форма обратной связи</a>
+          </div>
+        </section>
+        <footer class="main-footer container clearfix">
+          <div class="footer-social footer-block">
+              <a class="social-btn social-btn-vk" href="#">Вконтакте</a>
+              <a class="social-btn social-btn-fb" href="#">Фейсбук</a>
+              <a class="social-btn social-btn-inst" href="#">Инстаграм</a>
+              <a class="social-btn social-btn-tw" href="#">Твиттер</a>
+          </div>
+          <div class="footer-links footer-block">
+            <div>
+              <a class="for-supp" href="#">Для поставщиков</a>
+  <a href="#">О производстве</a> 
+            </div>
+            <div>
+              <a href="#">Наши документы</a>
+              <a href="#">Экологические стандарты</a>
+            </div>
+          </div>
+          <div class="footer-copyright footer-block">
+            <a href="#">HTML Academy</a>
+            <p>Сделано в <a href="#">HTML Academy</a> &copy; 2017</p>
+          </div>
+        </footer>    
+      </div>
+    </div>
   </body>
 </html>
